src/index.css
@import "tailwindcss";

@theme {
  --font-display: "Epilogue", sans-serif;

  --color-primary: #2beecd;
  --color-primary-hover: #25d6b8;

  /* Backgrounds */
  --color-background: #f5f7f9;
  --color-surface: #ffffff;
  --color-surface-hover: #f8fafc;

  /* Text */
  --color-text-main: #2B2B2B;
  --color-text-muted: #898B8C;

  /* Border */
  --color-border: #f6f6f6; /* slate-100 */
}

/* Global Reset */
:root {
  color-scheme: light;
  background-color: var(--color-background);
  color: var(--color-text-main);
}

/* Dark Theme Overrides */
html.dark {
  color-scheme: dark;
  --color-primary: #9bdf57;
  --color-primary-hover: #7fc341;
  --color-background: #171413;
  --color-surface: #1c1918;
  --color-surface-hover: #242120;
  --color-text-main: #e1dddb;
  --color-text-muted: #94a3b8;
  --color-border: #242120;
}

body {
  @apply antialiased min-h-screen flex flex-col font-display;
}

.hero-gradient {
  background: linear-gradient(
    180deg,
    rgba(249, 250, 250, 0) 0%,
    rgba(249, 250, 250, 0.4) 50%,
    rgba(249, 250, 250, 1) 90%
  );
}

@layer utilities {
  .no-scrollbar::-webkit-scrollbar {
    display: none; /* For Chrome, Safari, and Opera */
  }
  .no-scrollbar {
    -ms-overflow-style: none; /* For IE and Edge */
    scrollbar-width: none; /* For Firefox */
  }
}

